k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
 name: flask-app
 labels:
  app: flask-app
