k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
  labels:
    app: flask-app
spec:
  type: LoadBalancer # Change to NodePort for local clusters (minikube/kind)
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
